--- a/index.html
+++ b/index.html
@@ -423,6 +423,10 @@
                     <div class="flex flex-wrap gap-6 text-sm text-gray-600">
                         <a href="/pages/ToS" class="hover:text-gray-800 transition-colors">Privacy and Terms</a>
                         <a href="/error" class="hover:text-gray-800 transition-colors">About Access Point</a>
+                         <a href="/sitemap" class="hover:text-gray-800 transition-colors flex items-center">
+                            <span class="material-icons text-sm mr-1">add_location_alt</span>
+                            Sitemap
+                        </a>
                         <a href="/contributors" class="hover:text-gray-800 transition-colors flex items-center">
                             <span class="material-icons text-sm mr-1">diversity_2</span>
                             Contributors
@@ -645,12 +649,3 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
