--- a/help-center/therapy.html
+++ b/help-center/therapy.html
@@ -571,107 +571,6 @@
             font-size: 14px;
         }
 
-        /* Sections */
-        /*.section {
-            margin-bottom: 64px;
-        }
-
-        .section-title {
-            font-size: 28px;
-            font-weight: 500;
-            color: var(--primary-dark);
-            margin-bottom: 24px;
-        }*/
-
-        /*.card {
-            background: #f9fafb;
-            padding: 32px;
-            border-radius: 12px;
-            margin-bottom: 32px;
-        }*/
-
-        /*.card-highlight {
-            background: white;
-            border: 1px solid #e5e7eb;
-            border-left: 4px solid var(--green-medium);
-            padding: 24px;
-            border-radius: 8px;
-            margin: 24px 0;
-        }*/
-
-        /*.card-title {
-            font-size: 20px;
-            font-weight: 500;
-            color: var(--primary-dark);
-            margin-bottom: 16px;
-            display: flex;
-            align-items: center;
-            gap: 12px;
-        }*/
-
-        /*.icon {
-            width: 24px;
-            height: 24px;
-            fill: var(--green-medium);
-        }*/
-
-        .grid {
-            display: grid;
-            gap: 32px;
-        }
-
-        .grid-2 {
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-        }
-
-        .grid-3 {
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        }
-
-        /*.stats-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 24px;
-            margin-top: 24px;
-        }*/
-
-        /*.stat-item {
-            text-align: center;
-        }*/
-
-        /*.stat-number {
-            font-size: 32px;
-            font-weight: bold;
-            color: var(--green-light);
-            margin-bottom: 8px;
-        }*/
-
-        /*.stat-text {
-            font-size: 14px;
-            color: var(--primary-dark);
-        }*/
-
-        /*.list {
-            list-style: none;
-            margin: 16px 0;
-        }*/
-
-        /*.list li {
-            display: flex;
-            align-items: flex-start;
-            gap: 12px;
-            margin-bottom: 12px;
-        }*/
-
-        /*.list-bullet {
-            width: 8px;
-            height: 8px;
-            background: var(--green-medium);
-            border-radius: 50%;
-            margin-top: 8px;
-            flex-shrink: 0;
-        }*/
-
         /* Meta-style Connection Section */
         .connection-section {
             background: linear-gradient(135deg, var(--green-light) 0%, var(--green-medium) 50%, var(--green-dark) 100%);
@@ -680,108 +579,104 @@
             color: white;
         }
 
-        /* Crisis Section */
-        /*.crisis-section {
-            background: #fef2f2;
-            border: 2px solid #fecaca;
-            border-radius: 12px;
-            padding: 32px;
-            margin: 48px 0;
-        }*/
-
-        /*.crisis-title {
-            color: #dc2626;
-            font-size: 28px;
-            font-weight: 500;
-            margin-bottom: 24px;
-            display: flex;
-            align-items: center;
-            gap: 12px;
-        }*/
-
-        /*.crisis-text {
-            color: #dc2626;
-            font-size: 18px;
-            margin-bottom: 24px;
-        }*/
-
-        /*.crisis-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 24px;
-        }*/
-
-        /*.crisis-card {
-            background: white;
-            padding: 24px;
-            border-radius: 8px;
-            border: 1px solid #fecaca;
-        }*/
-
-        /*.crisis-card-title {
-            color: #dc2626;
-            font-size: 20px;
-            font-weight: 500;
-            margin-bottom: 16px;
-        }*/
-
-        /*.hotline-item {
-            display: flex;
-            align-items: center;
-            gap: 12px;
-            margin-bottom: 16px;
-        }*/
-
-        /*.hotline-icon {
-            width: 20px;
-            height: 20px;
-            fill: #dc2626;
-        }*/
-
         /* Footer */
         .footer {
             background: var(--primary-dark);
             color: white;
-            padding: 60px 0 30px;
+            padding: 40px 0;
         }
 
-        .footer-content {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 40px;
-            margin-bottom: 40px;
+        .footer-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
         }
 
-        .footer-section h3 {
+        .footer-social {
+            margin-bottom: 32px;
+        }
+
+        .footer-social h3 {
             color: var(--accent-yellow);
             font-size: 18px;
             font-weight: 500;
-            margin-bottom: 20px;
+            margin-bottom: 16px;
         }
 
-        .footer-section ul {
-            list-style: none;
+        .social-links {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 16px;
         }
 
-        .footer-section li {
-            margin-bottom: 12px;
-        }
-
-        .footer-section a {
+        .social-link {
+            display: flex;
+            align-items: center;
+            gap: 8px;
             color: #d1d5db;
             text-decoration: none;
+            font-size: 16px;
             transition: color 0.2s;
         }
 
-        .footer-section a:hover {
+        .social-link:hover {
             color: var(--accent-yellow);
         }
 
+        .social-icon {
+            width: 24px;
+            height: 24px;
+            fill: #d1d5db;
+        }
+
+        .social-link:hover .social-icon {
+            fill: var(--accent-yellow);
+        }
+
         .footer-bottom {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: center;
+            padding-top: 24px;
             border-top: 1px solid #4b5563;
-            padding-top: 30px;
-            text-align: center;
-            color: #9ca3af;
+            gap: 16px;
+        }
+
+        .footer-brand {
+            font-size: 16px;
+            font-weight: 500;
+            color: #d1d5db;
+        }
+
+        .footer-nav {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 24px;
+        }
+
+        .footer-nav a {
+            color: #d1d5db;
+            text-decoration: none;
+            font-size: 14px;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            transition: color 0.2s;
+        }
+
+        .footer-nav a:hover {
+            color: var(--accent-yellow);
+        }
+
+        .help-icon {
+            width: 20px;
+            height: 20px;
+            fill: #d1d5db;
+        }
+
+        .footer-nav a:hover .help-icon {
+            fill: var(--accent-yellow);
         }
 
         /* Responsive */
@@ -854,13 +749,27 @@
                 padding: 0 16px;
             }
 
-            .footer-content {
-                grid-template-columns: 1fr;
-                gap: 30px;
+            .footer-container {
+                padding: 0 16px;
             }
 
-            .footer {
-                padding: 40px 0 20px;
+            .footer-bottom {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 16px;
+            }
+
+            .footer-nav {
+                flex-direction: column;
+                gap: 12px;
+            }
+
+            .footer-nav a {
+                font-size: 14px;
+            }
+
+            .footer-social {
+                margin-bottom: 24px;
             }
         }
 
@@ -891,6 +800,14 @@
 
             .hero-image img {
                 height: 200px;
+            }
+
+            .footer-social h3 {
+                font-size: 16px;
+            }
+
+            .social-link {
+                font-size: 14px;
             }
         }
     </style>
@@ -1149,7 +1066,7 @@
                                 <svg viewBox="0 0 24 24">
                                     <path d="M13 10V3L4 14h7v7l9-11h-7z"/>
                                 </svg>
-                            </div>
+                           1212>
                             <h3 class="therapy-title">Group Therapy & Support</h3>
                             <p class="therapy-description">Therapeutic groups led by professionals where students with similar challenges support each other's healing and growth.</p>
                             <ul class="therapy-features">
@@ -1461,51 +1378,31 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>Resources</h3>
-                    <ul>
-                        <li><a href="/crisis-help">Crisis Support</a></li>
-                        <li><a href="/therapists">Find a Therapist</a></li>
-                        <li><a href="/services">Types of Therapy</a></li>
-                        <li><a href="/resources">Self-Care Tips</a></li>
-                        <li><a href="/insurance">Insurance Guide</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Support</h3>
-                    <ul>
-                        <li><a href="#">Student Counseling Centers</a></li>
-                        <li><a href="#">Online Therapy Platforms</a></li>
-                        <li><a href="#">Support Groups</a></li>
-                        <li><a href="#">Mental Health Apps</a></li>
-                        <li><a href="#">Campus Resources</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Information</h3>
-                    <ul>
-                        <li><a href="/resources">Benefits of Therapy</a></li>
-                        <li><a href="/faq">Common Myths</a></li>
-                        <li><a href="#">What to Expect</a></li>
-                        <li><a href="#">Warning Signs</a></li>
-                        <li><a href="/privacy">Privacy & Confidentiality</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Connect</h3>
-                    <ul>
-                        <li><a href="/contact">Contact Us</a></li>
-                        <li><a href="#">Feedback</a></li>
-                        <li><a href="#">Newsletter</a></li>
-                        <li><a href="#">Community Forum</a></li>
-                        <li><a href="#">Share Your Story</a></li>
-                    </ul>
+        <div class="footer-container">
+            <div class="footer-social">
+                <h3>Follow Us</h3>
+                <div class="social-links">
+                    <a href="https://www.facebook.com/ctudevcomofficial" class="social-link">
+                        <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                        </svg>
+                        Guild of Development Communicators
+                    </a>
                 </div>
             </div>
+
             <div class="footer-bottom">
-                <p>&copy; 2024 Student Therapy & Counseling Guide. Mental health support for every student's journey.</p>
+                <div class="footer-brand">Access Point</div>
+                <div class="footer-nav">
+                    <a href="/privacy">Privacy and Terms</a>
+                    <a href="/about">About Us</a>
+                    <a href="/help">
+                        <svg class="help-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/>
+                        </svg>
+                        Help
+                    </a>
+                </div>
             </div>
         </div>
     </footer>
@@ -1546,7 +1443,7 @@
             });
         });
 
-        // Mobile menu toggle (if needed)
+        // Mobile menu toggle
         document.querySelector('.menu-btn').addEventListener('click', function() {
             const sidebar = document.querySelector('.sidebar');
             sidebar.style.display = sidebar.style.display === 'none' ? 'block' : 'none';
