--- a/index.html
+++ b/index.html
@@ -290,13 +290,13 @@
                     <!-- Mobile dropdown (hidden on desktop) -->
                     <div class="lg:hidden mb-12">
                         <button onclick="toggleSecurityDropdown()" class="w-full bg-white border border-gray-300 rounded-lg px-4 py-3 text-left flex items-center justify-between hover:bg-gray-50 transition-colors">
-                            <span id="security-dropdown-label" class="font-semibold text-gray-800">Built-in security</span>
+                            <span id="security-dropdown-label" class="font-semibold text-gray-800">Built-in Support</span>
                             <span id="security-dropdown-icon" class="material-icons text-gray-600 transition-transform">expand_more</span>
                         </button>
                         <div id="security-dropdown-content" class="dropdown-content bg-white border border-t-0 border-gray-300 rounded-b-lg">
-                            <button onclick="selectSecurityOption('builtin', 'Built-in security')" class="w-full px-4 py-3 text-left hover:bg-gray-50 transition-colors border-b border-gray-200">Built-in security</button>
-                            <button onclick="selectSecurityOption('checkup', 'Security Checkup')" class="w-full px-4 py-3 text-left hover:bg-gray-50 transition-colors border-b border-gray-200">Security Checkup</button>
-                            <button onclick="selectSecurityOption('password', 'Government Password Manager')" class="w-full px-4 py-3 text-left hover:bg-gray-50 transition-colors">Government Password Manager</button>
+                            <button onclick="selectSecurityOption('builtin', 'Built-in security')" class="w-full px-4 py-3 text-left hover:bg-gray-50 transition-colors border-b border-gray-200">Built-in support</button>
+                            <button onclick="selectSecurityOption('checkup', 'Security Checkup')" class="w-full px-4 py-3 text-left hover:bg-gray-50 transition-colors border-b border-gray-200">Guidance Checkup</button>
+                            <button onclick="selectSecurityOption('password', 'Government Password Manager')" class="w-full px-4 py-3 text-left hover:bg-gray-50 transition-colors">Access Point Companion</button>
                         </div>
                     </div>
 
@@ -362,13 +362,13 @@
                     <!-- Mobile dropdown (hidden on desktop) -->
                     <div class="lg:hidden mb-12">
                         <button onclick="toggleHelpDropdown()" class="w-full bg-white border border-gray-300 rounded-lg px-4 py-3 text-left flex items-center justify-between hover:bg-gray-50 transition-colors">
-                            <span id="help-dropdown-label" class="font-semibold text-gray-800">Autofill</span>
+                            <span id="help-dropdown-label" class="font-semibold text-gray-800">Quick Guides</span>
                             <span id="help-dropdown-icon" class="material-icons text-gray-600 transition-transform">expand_more</span>
                         </button>
                         <div id="help-dropdown-content" class="dropdown-content bg-white border border-t-0 border-gray-300 rounded-b-lg">
-                            <button onclick="selectHelpOption('autofill', 'Autofill')" class="w-full px-4 py-3 text-left hover:bg-gray-50 transition-colors border-b border-gray-200">Autofill</button>
-                            <button onclick="selectHelpOption('better', 'Works better for you')" class="w-full px-4 py-3 text-left hover:bg-gray-50 transition-colors border-b border-gray-200">Works better for you</button>
-                            <button onclick="selectHelpOption('connected', 'Stay connected, across the internet')" class="w-full px-4 py-3 text-left hover:bg-gray-50 transition-colors">Stay connected, across the internet</button>
+                            <button onclick="selectHelpOption('autofill', 'Autofill')" class="w-full px-4 py-3 text-left hover:bg-gray-50 transition-colors border-b border-gray-200">Quick Guides</button>
+                            <button onclick="selectHelpOption('better', 'Works better for you')" class="w-full px-4 py-3 text-left hover:bg-gray-50 transition-colors border-b border-gray-200">Support that fits you</button>
+                            <button onclick="selectHelpOption('connected', 'Stay connected, across the internet')" class="w-full px-4 py-3 text-left hover:bg-gray-50 transition-colors">Stay connected, wherever you are</button>
                         </div>
                     </div>
 
@@ -649,3 +649,4 @@
     </script>
 </body>
 </html>
+
