--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                         <a href="/inquire/inquire" class="text-primary-dark hover:text-green-medium transition-colors">Message</a>
                         <a href="/hall-of-notes/hall-of-notes" class="text-primary-dark hover:text-green-medium transition-colors">Notes</a>
                         <a href="/pages/help" class="text-primary-dark hover:text-green-medium transition-colors">Help Center</a>
+                        <a href="/sprout" class="text-primary-dark hover:text-green-medium transition-colors">Sprout</a>
                         <a href="/pages/faq" class="text-primary-dark hover:text-green-medium transition-colors">FAQs</a>
                         <a href="/freedom-wall/login" class="text-primary-dark hover:text-green-medium transition-colors">Commons</a>
 
@@ -150,6 +151,7 @@
                         <a href="/inquire/inquire" class="text-primary-dark hover:text-green-medium transition-colors">Message</a>
                         <a href="/hall-of-notes/hall-of-notes" class="text-primary-dark hover:text-green-medium transition-colors">Notes</a>
                         <a href="/pages/help" class="text-primary-dark hover:text-green-medium transition-colors">Help Center</a>
+                       <a href="/sprout" class="text-primary-dark hover:text-green-medium transition-colors">Sprout</a>
                         <a href="/pages/faq" class="text-primary-dark hover:text-green-medium transition-colors">FAQs</a>
                         <a href="/freedom-wall/login" class="text-primary-dark hover:text-green-medium transition-colors">Commons</a>
                 </div>
@@ -649,4 +651,5 @@
     </script>
 </body>
 </html>
+
 
