--- a/sprout.html
+++ b/sprout.html
@@ -39,7 +39,7 @@
                 <img src="/src/logo.png" alt="Sprout Logo" class="w-8 h-8">
                 <h1 class="text-xl font-medium text-green-dark">Sprout</h1>
                 <div class="hidden sm:flex items-center space-x-1 bg-green-muted/10 px-3 py-1 rounded-full border border-green-muted/20">
-                    <span class="text-sm text-green-dark">AI Support</span>
+                    <span class="text-sm text-green-dark">Evergreen v1</span>
                 </div>
             </div>
             
