--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <a href="/sprout" class="text-primary-dark hover:text-green-medium transition-colors">Sprout</a>
                         <a href="/pages/faq" class="text-primary-dark hover:text-green-medium transition-colors">FAQs</a>
                         <a href="/freedom-wall/login" class="text-primary-dark hover:text-green-medium transition-colors">Commons</a>
-
+                        <a href="/announcements" class="text-primary-dark hover:text-green-medium transition-colors">Announcements</a>
                         </a>
                     </div>
                 </div>
@@ -154,6 +154,7 @@
                        <a href="/sprout" class="text-primary-dark hover:text-green-medium transition-colors">Sprout</a>
                         <a href="/pages/faq" class="text-primary-dark hover:text-green-medium transition-colors">FAQs</a>
                         <a href="/freedom-wall/login" class="text-primary-dark hover:text-green-medium transition-colors">Commons</a>
+                        <a href="/announcements" class="text-primary-dark hover:text-green-medium transition-colors">Announcements</a>
                 </div>
             </div>
         </nav>
@@ -651,5 +652,6 @@
     </script>
 </body>
 </html>
+
 
 
