--- a/admin/admin-panel.html
+++ b/admin/admin-panel.html
@@ -782,12 +782,12 @@
                 <h2 class="quick-access-title">Quick access</h2>
                 
                 <div class="services-grid">
-                    <div class="service-card" onclick="redirectToPage('announcement-management.html')">
+                    <div class="service-card" onclick="redirectToPage('announcement-management')">
                         <span class="material-icons service-icon">campaign</span>
                         <span class="service-name">Create an Announcement</span>
                     </div>
                     
-                    <div class="service-card" onclick="redirectToPage('inquiries.html')">
+                    <div class="service-card" onclick="redirectToPage('inquiries')">
                         <span class="material-icons service-icon">message</span>
                         <span class="service-name">View Messages</span>
                     </div>
@@ -877,7 +877,7 @@
                 }
             } else {
                 // Redirect to login if not authenticated
-                window.location.href = 'index.html';
+                window.location.href = '/admin/log-in';
             }
         });
 
@@ -896,7 +896,7 @@
             try {
                 await signOut(auth);
                 setTimeout(() => {
-                    window.location.href = 'index.html';
+                    window.location.href = '/admin/log-in';
                 }, 2000);
             } catch (error) {
                 console.error('Sign out error:', error);
@@ -923,3 +923,4 @@
     </script>
 </body>
 </html>
+
