--- a/pages/main.html
+++ b/pages/main.html
@@ -659,7 +659,7 @@
                     <span class="material-icons">diversity_3</span>
                     Freedom Wall - Commons
                 </a>
-                <a href="/notes/hall-of-notes" class="nav-item">
+                <a href="/hall-of-notes/hall-of-notes" class="nav-item">
                     <span class="material-icons">notes</span>
                     Notes
                 </a>
