--- a/contributors.html
+++ b/contributors.html
@@ -591,7 +591,7 @@
                 <p>For writing the Frequently Asked Questions section with thorough research and user-focused approach. Shanley anticipated user needs and provided clear solutions, significantly improving the platform's usability and user experience.</p>
                 <h3>Vanessa Cajilig</h3>
                 <p>For writing the privacy and terms of conditions of the access point with meticulous attention to legal compliance. Vanessa ensured user protection and regulatory adherence, establishing a secure foundation for platform operations.</p>
-                <h3>BSDC 1-A A.Y. 2025-2026</h3>
+                <h3>BSDC 1 A.Y. 2025-2026</h3>
                 <p>For making this project possible through collaborative effort, peer reviews, and continuous feedback. The entire class contributed to the platform's quality through testing, problem-solving, and academic excellence.</p>
                 <h3>Guild of Development Communicators CTU-MC</h3>
                 <p>For providing invaluable guidance throughout the development process. Their mentorship in technical communication, project management, and industry best practices helped shape both the implementation and documentation standards of this platform.</p>
@@ -600,7 +600,7 @@
             <div class="institutional-support">
                 <h3>Institutional Support & Academic Excellence</h3>
                 <p>
-                    <strong>BSDC 1-A Academic Year 2025-2026</strong> provided the collaborative foundation that made this project possible. The entire class contributed through peer reviews, testing, feedback sessions, and collaborative problem-solving that enhanced the platform's quality and functionality.
+                    <strong>BSDC 1 Academic Year 2025-2026</strong> provided the collaborative foundation that made this project possible. The entire class contributed through peer reviews, testing, feedback sessions, and collaborative problem-solving that enhanced the platform's quality and functionality.
                 </p>
                 <br>
                 <p><strong>Guild of Development Communicators CTU-MC</strong> offered invaluable guidance throughout the development process. Their mentorship in technical communication, project management, and industry best practices helped shape both the technical implementation and documentation standards that define this platform's professional quality.</p>
